# SHL-Assessment-Finder-Project-Intern-

./: .replit  README.md  app.py  main.py  pyproject.toml  query_functions.py  streamlit_app.py
attached_assets/: app_1765908483523.py  main_1765908483523.py  pyproject_1765908483524.toml  query_functions_1765908483524.py
